--- a/Python/divar/templates/modals/all_modals.html
+++ b/Python/divar/templates/modals/all_modals.html
@@ -826,15 +826,11 @@
           </p>
 
           </div>
-
-
-          
-
-
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-brand text-white px-3 py-2"> با قوانین موافقم</button>
+        <button type="button"data-bs-dismiss="modal" id="close_modal_agreement" class="d-none"></button>
+        <button type="button" id="agree_button" class="btn btn-brand text-white px-3 py-2"> با قوانین موافقم</button>
       </div>
     </div>
   </div>
