added user bookmarks

--- a/Python/divar/templates/post-page/index.html
+++ b/Python/divar/templates/post-page/index.html
@@ -149,13 +149,17 @@
                         </a>
 
                         <a href=""
-                          class="responsive-btn btn btn-brand btn-cs px-lg-4 px-md-5 px-4 fs-11 text-brand bg-white btn-outline-brand">چت
-                        </a>
+                          class="responsive-btn btn btn-brand btn-cs px-lg-4 px-md-5 px-4 fs-11 text-brand bg-white btn-outline-brand">چت</a>
                       </div>
 
                     </div>
-                    <div class="w-auto pe-2">
-                      <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
+                    <div class="w-auto pe-2 d-flex">
+                      <div id="container_bookmark">
+                        <a id="bookmark_button" role="button" class="icon-save-share text-muted p-2 "><i class="bi bi-bookmark"></i></a>
+                      </div>
+                      <div>
+                        <a role="button" class="icon-save-share text-muted p-2 "><i class="fs-10 bi bi-share-fill"></i></a>
+                      </div>
                     </div>
                   </div>
                   <div class="collapse" id="user-info-open" data-parent="#info-user">
